Fix: wrong verb used

--- a/examples/pr_push.yml
+++ b/examples/pr_push.yml
@@ -101,7 +101,7 @@ jobs:
         name: call dnscontrol action
         uses: StackExchange/dnscontrol-action@f227f6014445e9a45ca0e75d80296a4c7f796884
         with:
-          cmdargs: preview
+          cmdargs: push
           post_pr_comment: false
           post_summary: true
           check: false
