add support for windows and mac runners

--- a/action.yml
+++ b/action.yml
@@ -58,6 +58,13 @@ runs:
   using: composite
   steps:
 
+    - name: Check Runner OS
+      if: ${{ runner.os != 'Linux' && runner.os != 'Windows' && runner.os != 'macOS'}}
+      shell: bash
+      run: |
+        echo "::error title=error::Action supports Linux, Windows, and macOS only"
+        exit 1
+
     - name: Sanitize inputs
       env:
         DNSCONTROL_VERSION: ${{ inputs.version }}
@@ -107,6 +114,54 @@ runs:
         esac
         echo "CREDS_ARG=$CREDS_ARG" >>"$GITHUB_ENV"
 
+    - name: Resolve OS and Arch
+      env:
+        RUNNER_OS: ${{ runner.os }}
+        RUNNER_ARCH: ${{ runner.arch }}
+      shell: bash
+      run: |
+        # Resolve OS and Arch
+        case "$RUNNER_OS" in
+          Linux)
+            OS='linux'
+            EXT='tar.gz'
+          ;;
+          Windows)
+            OS='windows'
+            EXT='zip'
+          ;;
+          macOS)
+            OS='darwin'
+            EXT='tar.gz'
+          ;;
+          *)
+            echo "::error title=error::unsupported runner.os \"$RUNNER_OS\""
+            exit 1
+          ;;
+        esac
+
+        case "$RUNNER_ARCH" in
+          X64 | x86_64)
+            ARCH='amd64'
+          ;;
+          ARM64 | aarch64)
+            ARCH='arm64'
+          ;;
+          *)
+            echo "::error title=error::unsupported runner.arch \"$RUNNER_ARCH\""
+            exit 1
+          ;;
+        esac
+
+        if [[ "$OS" == "darwin" ]]; then
+          ARCH=all
+        fi
+
+        echo "ARCH=$ARCH" >>"$GITHUB_ENV"
+        echo "OS=$OS" >>"$GITHUB_ENV"
+        echo "EXT=$EXT" >>"$GITHUB_ENV"
+
+
     - name: Resolve download URL for latest
       if: ${{ inputs.version == 'latest' }}
       shell: bash
@@ -114,8 +169,9 @@ runs:
         # Resolve download URL for latest
         URL=$(\
           $CURL -L https://api.github.com/repos/StackExchange/dnscontrol/releases/latest \
-          | jq -r '.assets[] | select(.name? | match("dnscontrol_*.*.*_linux_amd64.tar.gz$")) | .browser_download_url'\
+          | jq -r ".assets[] | select(.name? | match(\"dnscontrol_*.*.*_$OS_$ARCH.$EXT$\")) | .browser_download_url"\
         )
+        echo "resolved package url: $URL"
         echo "URL=$URL" >>"$GITHUB_ENV"
 
     - name: Resolve download URL
@@ -125,21 +181,50 @@ runs:
         # Resolve download URL
         URL=$(\
           $CURL -L https://api.github.com/repos/StackExchange/dnscontrol/releases \
-          | jq -r ".[] | select(.tag_name == \"$DNSCONTROL_VERSION\") | .assets[] | select(.name? | match(\"dnscontrol_*.*.*_linux_amd64.tar.gz$\")) | .browser_download_url" \
+          | jq -r ".[] | select(.tag_name == \"$DNSCONTROL_VERSION\") | .assets[] | select(.name? | match(\"dnscontrol_*.*.*_$OS_$ARCH.$EXT$\")) | .browser_download_url" \
         )
+        echo "resolved package url: $URL"
         echo "URL=$URL" >>"$GITHUB_ENV"
 
     - name: Download DNSControl
+      id: download
       shell: bash
       env:
         TEMP: ${{ runner.temp }}
       run: |
         # Download DNSControl
-        $CURL -L "${URL}" \
-          | tar -C "$TEMP" -xvzf - dnscontrol
-        DNSCONTROL=$(readlink -f "$TEMP/dnscontrol")
-        echo "DNSCONTROL=$DNSCONTROL" >>"$GITHUB_ENV"
-        $DNSCONTROL version
+        $CURL -L "${URL}" -o "$TEMP/dnscontrol.$EXT"
+        echo "file=$TEMP/dnscontrol.$EXT" >>"$GITHUB_OUTPUT"
+
+    - name: Unpack DNSControl - Linux or macOS
+      if: ${{ runner.os == 'Linux' || runner.os == 'macOS' }}
+      shell: bash
+      env:
+        TEMP: ${{ runner.temp }}
+        PACKAGE: ${{ steps.download.outputs.file }}
+      run: |
+        # Unpack DNSControl - Linux or macOS
+        RESOLVED_TEMP="$(readlink -f $TEMP)/dnscontrol$RANDOM"
+        mkdir -p "$RESOLVED_TEMP"
+        tar -C "$RESOLVED_TEMP" -xvzf $PACKAGE dnscontrol
+        echo "$RESOLVED_TEMP" >>"$GITHUB_PATH"
+        $RESOLVED_TEMP/dnscontrol version
+        echo "DNSCONTROL=$RESOLVED_TEMP/dnscontrol" >>"$GITHUB_ENV"
+
+    - name: Unpack DNSControl - Windows
+      if: ${{ runner.os == 'Windows' }}
+      shell: bash
+      env:
+        TEMP: ${{ runner.temp }}
+        PACKAGE: ${{ steps.download.outputs.file }}
+      run: |
+        # Unpack DNSControl - Windows
+        RESOLVED_TEMP="$TEMP/dnscontrol$RANDOM" # windows lacks readlink, so this may be relative
+        mkdir -p "$RESOLVED_TEMP"
+        unzip -d "$RESOLVED_TEMP" $PACKAGE dnscontrol.exe
+        echo "$RESOLVED_TEMP" >>"$GITHUB_PATH"
+        $RESOLVED_TEMP/dnscontrol.exe version
+        echo "DNSCONTROL=$RESOLVED_TEMP/dnscontrol.exe" >>"$GITHUB_ENV"
 
     - name: DNSControl check
       if: ${{ inputs.check == 'true' }}
@@ -265,5 +350,5 @@ runs:
       shell: bash
       run: |
         # Action failed
-        echo "DNSControl command failed"
+        echo "::error title=error::DNSControl command failed"
         exit 1
